--- a/css/base.css
+++ b/css/base.css
@@ -3,3 +3,20 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+.split-grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 50px;
+}
+
+.split-grid iframe {
+  width: 100%;
+}
+
+@media (max-width: 768px) {
+  .split-grid {
+    grid-template-columns: repeat(auto-fill, 100%);
+    grid-gap: 25px;
+  }
+}
